k8s/gcp/core/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    app: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      serviceAccountName: svc-detours
      automountServiceAccountToken: false
      containers:
        - name: core
          image: gcr.io/robocation/core:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /test
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /test
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          imagePullPolicy: IfNotPresent
          command:
            - "/cloud_sql_proxy"
            - "-instances=robocation:us-west1:detours=tcp:5432"
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          resources:
            requests:
              memory: "250Mi"
              cpu: "25m"
            limits:
              memory: "250Mi"
              cpu: "25m"
