k8s/gcp/core/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: core
  labels:
    app: core
spec:
  serviceAccountName: sql-service
  automountServiceAccountToken: false
  containers:
    - name: core
      image: gcr.io/robocation/core:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 5000
          protocol: TCP
      resources:
        limits:
          memory: "1Gi"
          cpu: "100m"
      livenessProbe:
        httpGet:
          path: /test
          port: 5000
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /test
          port: 5000
        initialDelaySeconds: 30
        periodSeconds: 10
    - name: cloud-sql-proxy
      image: gcr.io/cloudsql-docker/gce-proxy:1.17
      imagePullPolicy: IfNotPresent
      command:
        - "/cloud_sql_proxy"
        - "-instances=robocation:us-west1:detours=tcp:5432"
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
      resources:
        limits:
          memory: "250M"
          cpu: "25m"
