k8s/gcp/core/service.yml
apiVersion: v1
kind: Service
metadata:
  name: core
  labels:
    app: detours
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: core
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
