k8s/gcp/core/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: core
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: core
          servicePort: 5000
